--- a/package.json
+++ b/package.json
@@ -1,24 +1,44 @@
 {
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "build": "vite build",
-        "dev": "vite",
-        "fusion:install": "node -e \"try { if (!require('fs').existsSync('vendor/fusionphp/fusion/packages/vue')) { console.warn('\\x1b[33m%s\\x1b[0m', '\u26a0\ufe0f  Fusion package not found - skipping dependency installation'); process.exit(0); } console.log('\\x1b[36m%s\\x1b[0m', '\ud83d\udce6 Installing Fusion dependencies...'); require('child_process').execSync('cd vendor/fusionphp/fusion/packages/vue && npm install', {stdio: 'inherit'}); console.log('\\x1b[32m%s\\x1b[0m', '\u2705 Fusion dependencies installed successfully'); } catch (error) { console.error('\\x1b[31m%s\\x1b[0m', '\u274c Error installing Fusion dependencies:'); console.error('\\x1b[31m%s\\x1b[0m', error.message); process.exit(1); }\"",
-        "postinstall": "npm run fusion:install"
-    },
-    "devDependencies": {
-        "@fusion/vue": "file:vendor/fusionphp/fusion/packages/vue",
-        "@inertiajs/vue3": "^2.0.0",
-        "@tailwindcss/forms": "^0.5.3",
-        "@vitejs/plugin-vue": "^5.0.0",
-        "autoprefixer": "^10.4.12",
-        "axios": "^1.7.4",
-        "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^1.2.0",
-        "postcss": "^8.4.31",
-        "tailwindcss": "^3.2.1",
-        "vite": "^6.0.11",
-        "vue": "^3.4.0"
-    }
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"build": "vite build",
+		"dev": "vite",
+		"fusion:install": "node -e \"try { if (!require('fs').existsSync('vendor/fusionphp/fusion/packages/vue')) { console.warn('\\x1b[33m%s\\x1b[0m', '⚠️  Fusion package not found - skipping dependency installation'); process.exit(0); } console.log('\\x1b[36m%s\\x1b[0m', '📦 Installing Fusion dependencies...'); require('child_process').execSync('cd vendor/fusionphp/fusion/packages/vue && npm install', {stdio: 'inherit'}); console.log('\\x1b[32m%s\\x1b[0m', '✅ Fusion dependencies installed successfully'); } catch (error) { console.error('\\x1b[31m%s\\x1b[0m', '❌ Error installing Fusion dependencies:'); console.error('\\x1b[31m%s\\x1b[0m', error.message); process.exit(1); }\"",
+		"postinstall": "npm run fusion:install"
+	},
+	"devDependencies": {
+		"@fusion/vue": "file:vendor/fusionphp/fusion/packages/vue",
+		"@iconify/json": "^2.2.306",
+		"@inertiajs/vue3": "^2.0.0",
+		"@pinegrow/tailwindcss-plugin": "^3.0.35",
+		"@pinegrow/vite-plugin": "^3.0.69",
+		"@tailwindcss/forms": "^0.5.3",
+		"@unocss/preset-icons": "^65.4.3",
+		"@vitejs/plugin-vue": "^5.0.0",
+		"autoprefixer": "^10.4.12",
+		"axios": "^1.7.4",
+		"concurrently": "^9.0.1",
+		"laravel-vite-plugin": "^1.2.0",
+		"postcss": "^8.4.31",
+		"tailwindcss": "^3.2.1",
+		"unocss": "^65.4.3",
+		"unplugin-auto-import": "^19.0.0",
+		"unplugin-vue-components": "^28.0.0",
+		"vite": "^6.0.11",
+		"vue": "^3.4.0"
+	},
+	"dependencies": {
+		"@tailwindcss/typography": "^0.5.16",
+		"@vueuse/core": "^12.6.1",
+		"defu": "^6.1.4"
+	},
+	"name": "happy-paws-with-nuxt-tailwindcss",
+	"description": "Adopt Your Fur Mate",
+	"author": "Pinegrow",
+	"homepage": "https://happy-paws-with-nuxt-tailwindcss.netlify.app",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/pinegrow/happy-paws-with-nuxt-tailwindcss"
+	}
 }
